--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-less": "0.11.1",
     "grunt-contrib-coffee": "~0.10.1",
-    "sails-mongo": "~0.10.4"
+    "sails-mongo": "~0.10.4",
+    "bcrypt": "~0.8.0"
   },
   "scripts": {
     "start": "node app.js",
