--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "sails-mongo": "~0.10.4",
     "bcrypt": "~0.8.0",
     "express": "~4.9.5",
-    "express-helpers": "~1.3.1"
+    "express-helpers": "~1.3.1",
+    "aws-sdk": "~2.0.23",
+    "skipper-s3": "~0.5.5"
   },
   "scripts": {
     "start": "node app.js",
